Added a paragraph to homepage

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <a href="#">Personal Website</a>
   <a href="#">Personal Siteplan</a>
 </nav>
+<p>Jarom Fogle - WDD130</p> 
 <body>
     
 </body>
