--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Dry Oar Site Plan</h1>
     <h2>[Jarom Fogle]</h2>
-    <h2>WDD 130-BYU Pathway</h2>
+    <h2>WDD 130-Section 30</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -19,7 +19,7 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>The over arching purpose of the website is inform customers about who we are as a company and what kind of services we offer.It will also allow customers to view rafting packages, see their prices and make payments. Customers will be able to leave reviews of their experieince with the ability to upload photos. We will also ask for contact information for futire promotions and other marketing needs. The need for this website is to make it easier for potential customers to find us and set up rafting experiences. It will help our business grow and make it easier for us to track sales.   </p>
+    <p>The over arching purpose of the website is inform customers about who we are as a company and what kind of services we offer. It will also allow customers to view rafting packages, see their prices and make payments. Customers will be able to leave reviews of their experieince with the ability to upload photos. We will also ask for contact information for futire promotions and other marketing needs. The need for this website is to make it easier for potential customers to find us and set up rafting experiences. It will help our business grow and make it easier for us to track sales.   </p>
     <!-- change this -->
 
     <h3>Audience</h3>
@@ -30,7 +30,8 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/circlelogo.jpeg" alt="Logo image" />
+    <img src="https://byui-wdd.github.io/wdd130/resources/images/logos/circlelogo.jpeg" alt="Logo image" />
+    <!--<img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -39,10 +40,10 @@
     <h3>Color Palette</h3>
     <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in Canvas then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
-    <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
+  <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <a href="https://coolors.co/574c2c-4f772d-0081af-ffffff"
+      target="_blank">https://coolors.co/574c2c-4f772d-0081af-ffffff</a>
 
     <table class="colors">
       <tr>
@@ -53,10 +54,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">[#4f772d]</td>
+        <td class="secondary">[#0081af]</td>
+        <td class="accent1">[#574c2c]</td>
+        <td class="accent2">[#ffffff]</td>
       </tr>
     </table>
 
@@ -66,11 +67,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: [Raleway]
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: [Source Sans 3]
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
