--- a/wwr/index.html
+++ b/wwr/index.html
@@ -28,7 +28,7 @@
                 <h1 class = "home-title">Have An Adventure</h1>
                 <h4>Make Memories with Dry Oar</h4>
                 <div class = "button-box">
-                    <a class="book" href = contactus.html> Book Now</a> 
+                    <a class="book" href = contactus.html target="_blank"> Book Now</a> 
                 </div>
             </section> 
         </div>
@@ -53,14 +53,14 @@
             <section class="msg">
                 <h2>More Than Just The Thrill</h2>
                 <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongstall the beauty of the great outdoors.</p>
-                <a class="join" href="rivers.html">Join Us</a>
+                <a class="join" href="rivers.html"target="_blank">Join Us</a>
             </section>
             
         </main>
         <footer>
             <p> Dry Oar &copy; 2022 Jarom Fogle</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="contactus.html">Contact Us</a></p>
+            <p><a href="contactus.html"target="_blank">Contact Us</a></p>
             <div class = "social">
                 <a href="https://facebook.com" target ="_blank">
                     <img src="images/facebook.png" alt="fb icon">
