--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <a href="wwr/index.html">White Water Rafting Website</a>
   <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
   <a href="positioning.html">Positioning Activity</a>
-  <a href="#">Personal Website</a>
-  <a href="#">Personal Siteplan</a>
+  <a href="foglelibrary/index.html">Fogle Library Website</a>
+  <a href="foglelibrary/site-plan.html">Fogle Library Siteplan</a>
 </nav>
 <p>Jarom Fogle - WDD130</p> 
 <body>
