--- a/foglelibrary/site-plan.html
+++ b/foglelibrary/site-plan.html
@@ -18,7 +18,9 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>The purpose of this website is to provide a meeting place that all family members can access to view the books found in our personal library. Each book in the library will have a cover image, synopsis, and link to an electronic version as available. The site will also include other pertinant informations such as if the book belongs to a series, release dates of future books, biographical information on authors with links to their websites, and eventually user reviews.   </p>  <!-- change this -->
+      <p>The purpose of this website is to inform other about authors who have inspired me and provide a place to find the literature that teaches me to be a better person. 
+
+    </p>  <!-- change this -->
 
 
       <h3>Audience</h3>
@@ -28,7 +30,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="/Users/majorfogle/Desktop/wdd130/foglelibrary/styles/images/green.png" alt="Logo image">
+      <img src="./foglelibrary/styles/images/green.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -85,8 +87,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Brandon Sanderson</a>
+        <a href="#">The Golden Age</a>
       </nav>
       <hr>
       <h2>
@@ -97,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Brandon Sanderson <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          The Golden Age <!-- change this -->
         </div>
 
         <div class="top">
@@ -122,14 +124,17 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        The love of reading has really defined me as a person and as a parent. When I look back at my younger years and think what impacted me the most it was that I loved to read and I read all the time. As an adult I have now climbed the literature ladder to the point where I want to only read and own books that uplift and inspire me to be a better person. I want to feel good about the time I spend reading.
+        <br>
+        <br>
+        The authors included on this page are some of the men and women who have made me a better person through reading their works. The literature included has been tried and tested; it inspires by reminding us what it means to be a person of good moral and character, what it means to be a hard worker and why it matters, and to think of others before yourself. 
       </p>
       <p>Images for the Home page</p>
         <img src="#" alt="image for homepage">
         <img src="#" alt="image for homepage">
 
       
-      <h3>[Page 2]</h3>
+      <h3>Brandon Sanderson</h3>
       <p>
         [Written copy for the Page 2 here]
       </p>
@@ -138,7 +143,7 @@
         <img src="#" alt="image for page">
 
       
-      <h3>[Page 3]</h3>
+      <h3>The Golden Age of Literature</h3>
       <p>
         [Written copy for the Page 3 here]
       </p>
