--- a/foglelibrary/site-plan.html
+++ b/foglelibrary/site-plan.html
@@ -24,13 +24,13 @@
 
 
       <h3>Audience</h3>
-      <p>The intended audience for this site are members of the Fogle family and their friends. </p>  <!-- change this -->
+      <p>The intended audience for this site is anyone who is interested in inspiring literature and the authors who write such words. </p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="./foglelibrary/styles/images/green.png" alt="Logo image">
+      <img src="images/green.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
