--- a/foglelibrary/site-plan.html
+++ b/foglelibrary/site-plan.html
@@ -166,7 +166,7 @@
        <br>
        This philosophy comes through in his writings and stories. His characters are not perfect people, but they are people or strong moral character who don't give up when most others would, they always defend what is right and true even at great personal cost to themselves. 
       </p>
-      <p>Images for the Jeff Wheeler</p>
+      <p>Images for the Jeff Wheeler Page</p>
         <img src="images/jwheadshot.png" alt="Jeff Wheeler Head Shot">
         <br>
         <img src="images/virtus.png" alt="Virtus">
