--- a/wwr/index.html
+++ b/wwr/index.html
@@ -15,7 +15,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#" target="_blank">Page 2</a>
+                <a href="rates.html">Rates and Dates</a>
                 <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
                 <a href="contactus.html" target="_blank">Contact Us</a>
             </nav>
