Child Page day 2

--- a/wwr/rates.html
+++ b/wwr/rates.html
@@ -14,7 +14,7 @@
                 <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
             </a>
             <nav>
-                <a href="index.html"target="_blank">Home</a>
+                <a href="index.html" target="_blank">Home</a>
                 <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
                 <a href="contactus.html" target="_blank">Contact Us</a>
             </nav>
@@ -25,54 +25,64 @@
         <main id = "rates-grid">
             <div class="box1">
                 <section class = "bigrates-box">
-                    <img class="box-img1">
-                    <h1>GRAND CANYON: Three Night Trip</h1>
-                    <p> Description of Trip</p>
-                    <h2>Dates of Trip</h2>
-                        <li>April 30th</li> 
-                        <li>May 13th</li><li>May 20th</li><li>May 27th</li><li>May 30th</li>
-                        <li>June 3rd</li><li>June 10th</li><li>June 17th</li><li>June 24th</li><li>June 28th</li>
-                        <li>July 1st</li><li>July 8th</li><li>July 15th</li><li>July 22nd</li><li>July 29th</li>
-                        <li>August 5th</li><li>August 12th</li><li>August 19th</li><li>August 26th</li>
-                        <li>September 9th</li><li>September 17th</li> 
+                    <img class="box-img1" src="images/grca3.png" alt="Grand Canyon 3 logo">
+                    <h1 class="title">GRAND CANYON:<br>Three Night Trip</h1>
+                    <p> Spend five days and three nights exploring some of the Grand Canyons most unforgetable views. With the help of our guided tours this trip will be unforgetable. </p>
+                    <h2>Dates Available</h2>
+                        <ul>
+                            <li>April 30th</li> 
+                            <li>May 13th</li><li>May 20th</li><li>May 27th</li><li>May 30th</li>
+                            <li>June 3rd</li><li>June 10th</li><li>June 17th</li><li>June 24th</li><li>June 28th</li>
+                            <li>July 1st</li><li>July 8th</li><li>July 15th</li><li>July 22nd</li><li>July 29th</li>
+                            <li>August 5th</li><li>August 12th</li><li>August 19th</li><li>August 26th</li>
+                            <li>September 9th</li><li>September 17th</li> 
+                        </ul>
                     <a class="booknow" href="#" target="_blank">Book Now $1,475</a>
                 </section>
             </div>
 
             <div class="box2">
                 <section class = "bigrates-box">
-                    <img class="box-img2">
-                    <h1>GRAND CANYON: Six Night Trip</h1>
-                    <p> The dates listed will be the date that you spend the night in Marble Canyon. The launch date is the following day.</p>
-                    <h2>Dates of Trip</h2>
-                        <li>April 25th</li>
-                        <li>May 8th</li><li>May 15th</li><li>May 22nd</li><li>May 25th</li><li>May 29th</li>
-                        <li>June 5th</li><li>June 12th</li><li>June 19th</li><li>June 23rd</li><li>June 26th</li>
-                        <li>July 3rd</li><li>July 10th</li><li>July 17th</li><li>July 24th</li><li>July 31st</li>
-                        <li>August 7th</li><li>August 14th</li><li>August 21st</li>
-                        <li>September 4th</li><li>September 12th</li>
+                    <img class="box-img2" src="images/grca6.png" alt="Grand Canyon 6 logo">
+                    <h1 class="title">GRAND CANYON:<br>Six Night Trip</h1>
+                    <p> This extended trip through the canyon allows you to see all the this Grand Canyon has to offer. The adventure is waiting, are you brave enough to head the call?</p>
+                       
+                    <h2>Dates Available</h2>
+                        <div>The dates listed will be the date that you spend the night in Marble Canyon. The launch date is the following day.</div>
+                        <ul>
+                            <li>April 25th</li>
+                            <li>May 8th</li><li>May 15th</li><li>May 22nd</li><li>May 25th</li><li>May 29th</li>
+                            <li>June 5th</li><li>June 12th</li><li>June 19th</li><li>June 23rd</li><li>June 26th</li>
+                            <li>July 3rd</li><li>July 10th</li><li>July 17th</li><li>July 24th</li><li>July 31st</li>
+                            <li>August 7th</li><li>August 14th</li><li>August 21st</li>
+                            <li>September 4th</li><li>September 12th</li>
+                        </ul>
                     <a class="booknow" href="#" target="_blank">Book Now $2,550</a>
                 </section>
             </div>
 
             <div class="box3">
                 <section class = "smallrates-box">
-                    <img class="box-img3">
-                    <h1>SALMON RIVER: Five Night Trip</h1>
-                    <p> The dates listed will be the date that you spend the night in Salmon. The launch date is the following day.</p>
-                    <h2>Dates of Trip</h2>
-                        <li>June 3rd</li><li>June 10th</li><li>June 17th</li><li>June 24th</li>
-                        <li>July 2nd</li>
+                    <img class="box-img3" src="images/sari5.png" alt="Salmon River 5 logo">
+                    <h1 class="title">SALMON RIVER:<br>Five Night Trip</h1>
+                    <p> Nestled in the heart of Idaho this wild river is an amazing journey through rarely visited sites that will keep you wanting more.</p>  
+                        
+                    <h2>Dates Available</h2>
+                        <div>The dates listed will be the date that you spend the night in Marble Canyon. The launch date is the following day.</div>
+                        <ul>
+                            <li>June 3rd</li><li>June 10th</li><li>June 17th</li><li>June 24th</li>
+                            <li>July 2nd</li>
+                        </ul>
                     <a class="booknow" href="#" target="_blank">Book Now $1,540</a>
                 </section>
             </div>
 
             <div class="box4">
                 <section class = "smallrates-box">
-                    <img class="box-img4">
-                    <h1>DESOLATION Six Night Trip</h1>
-                    <p> Description of Trip</p>
-                    <h2>Dates of Trip</h2>
+                    <img class="box-img4" src="images/dela6.png" alt="Desolation 6 logo">
+                    <h1 class="title">DESOLATION:<br>Six Night Trip</h1>
+                    <p> Desolation Canyon is one of the most remote adventures we offer. Hidden in Eastern Utah you will be one of the few who can say they servived Desolation.</p>
+                    <h2>Dates Available</h2>
                         <ul>
                             <li>July 10th</li><li>July 18th</li><li>July 26th</li>
                             <li>August 3rd</li><li>August 11th</li><li>August 19th</li><li>August 27th</li>
