--- a/foglelibrary/brandon.html
+++ b/foglelibrary/brandon.html
@@ -11,6 +11,7 @@
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/green.png" alt="Fogle Family Library Logo">
+        </a>
         <nav>
             <a href= "index.html">Home</a>
             <a href= "brandon.html">Brandon Sanderson</a>
@@ -22,16 +23,16 @@
         <h1 class="title">Brandon Sanderson</h1>
     </div>
     <main>
-        <secion id="bsbanner">
-            <img class="banner" src="images/stormlight.png" alt="Stormlight Archive"
-        </secion>
+        <section id="bsbanner">
+            <img class="banner" src="images/stormlight.png" alt="Stormlight Archive">
+        </section>
         <section id="bsbio">
-            <img class="headshot" src="images/bsheadshot.png" alt="Brandon Sanderson Headshot"
+            <img class="headshot" src="images/bsheadshot.png" alt="Brandon Sanderson Headshot">
             <p class="biotext">Brandon began writing from a young age. He was an avid reader all through his growing up years. When he first got to college in 1994 he was a chemistry major, and worte for fun on the side. He served a two-year mission in Korea during which he found he missed writing more than chemistry. When he returned to school he changed his majot to English. He worked hard and wrote seven novels during his undergrad. It wasn't until 2003 during his graduate program that he was able to publish his first book. For his full bio click the link below. </p>
             <a class="link" href="https://www.brandonsanderson.com/about-brandon/" target="_blank">Full Bio</a>
         </section>
         <div id="bssubtitle">
-            <hs class="subtitle">Books by Brandon Sanderson</hs>
+            <h2 class="subtitle">Books by Brandon Sanderson</h2>
         </div>
         <section id="sabookquotes">
             <div id="sa1">
