--- a/foglelibrary/jeff.html
+++ b/foglelibrary/jeff.html
@@ -11,6 +11,7 @@
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/green.png" alt="Fogle Family Library Logo">
+        </a>
         <nav>
             <a href= "index.html">Home</a>
             <a href= "brandon.html">Brandon Sanderson</a>
@@ -23,18 +24,18 @@
         <h1 class="title">Jeff Wheeler</h1>
     </div>
     <main>
-        <secion id="jwbanner">
-            <img class="banner" src="images/virtus.png" alt="Virtus Definition"
-        </secion>
+        <section id="jwbanner">
+            <img class="banner" src="images/virtus.png" alt="Virtus Definition">
+        </section>
         <section id="jwbio">
-            <img class="headshot" src="images/jwheadshot.png" alt="Jeff Wheeler Headshot"
+            <img class="headshot" src="images/jwheadshot.png" alt="Jeff Wheeler Headshot">
             <p class="biotext">Jeff Wheeler has always loved books and dreamed of being a writer someday. In 2014 he left his full-time job at Intel to turn all his attention to writing. His books inpire readers to be the best versions of themselves. He says, "In the world I live in, there are plenty of harsh realities. But when I want to enjoy a movie or delve into a book, I want to be inspired. I want to see someone rise to the challenges instead of submit to them. I want to see more Virtus. It is about trying to be someone bigger than yourself, despite the odds, falling down, getting scuffed up, and still going. Even when the one you love goes another way. Even when you fail sometimes. And that is why I write."
             For his full bio click the link below.
             </p>
             <a class="link" href="https://jeff-wheeler.com/jeffs-bio/" target="_blank">Full Bio</a>
         </section>
         <div id="jwsubtitle">
-            <hs class="subtitle">Books by Jeff Wheeler</hs>
+            <h2 class="subtitle">Books by Jeff Wheeler</h2>
         </div>
         <section id="jwbookquotes">
             <div id="kf1">
