--- a/foglelibrary/index.html
+++ b/foglelibrary/index.html
@@ -7,7 +7,7 @@
     <title>Fogle Family Library Homepage</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="homegrid">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/green.png" alt="Fogle Family Library Logo">
@@ -19,33 +19,35 @@
             <a href= "https://www.librariesofhope.com">Libraries of Hope</a>
         </nav>
     </header>
-    <div id="hometitle">
-        <h1 class="title">Fogle Family Library</h1>
-    </div>
-    <main>
-        <section>
-            <p id="para1">The love of reading has really defined me as a person and as a parent. When I look back at my younger years and think what impacted me the most it was that I loved to read and I read all the time. As an adult I have now climbed the literature ladder to the point where I want to only read and own books that uplift and inspire me to be a better person. I want to feel good about the time I spend reading.</p>
-
-            <img id="coverimg1" src="images/ngquote.png" alt="Neil Gaiman Quote">
-            <img id="coverimg2" src="images/aequote.png" alt="Albert Einstein Quote">
-
-            <p id="para2">The authors included on this page are some of the men and women who have made me a better person through reading their works. The stories included inspire by reminding us what it means to be a person of good moral and character, what it means to be a hard worker and not give up, and to think of others before yourself. </p>
-        </section>
-        <div id="homesubtitle">
-            <h2 class="subtitle">Author List</h2>
+    <div id="content">
+        <div id="hometitle">
+            <h1 class="title">Fogle Family Library</h1>
         </div>
-        <section>
-            <a id="bsname" href="brandon.html" target="_blank">
-                <img class="namecard" src="images/bsname1.png" alt="Brandon Sanderson">
-            </a>
-            <a id="jwname" href="jeff.html" target="_blank">
-                <img class="namecard" src="images/jwname1.png" alt="Jeff Wheeler">
-            </a>
-            <a id="faname" href="#" target="_blank">
-                <img class= "namecard" src="images/faname1.png" alt="Future Author">
-            </a>
-        </section>
-    </main>
+        <main>
+            <section>
+                <p id="para1">The love of reading has really defined me as a person and as a parent. When I look back at my younger years and think what impacted me the most it was that I loved to read and I read all the time. As an adult I have now climbed the literature ladder to the point where I want to only read and own books that uplift and inspire me to be a better person. I want to feel good about the time I spend reading.</p>
+
+                <img id="coverimg1" src="images/ngquote.png" alt="Neil Gaiman Quote">
+                <img id="coverimg2" src="images/aequote.png" alt="Albert Einstein Quote">
+
+                <p id="para2">The authors included on this page are some of the men and women who have made me a better person through reading their works. The stories included inspire by reminding us what it means to be a person of good moral and character, what it means to be a hard worker and not give up, and to think of others before yourself. </p>
+            </section>
+            <div id="homesubtitle">
+                <h2 class="subtitle">Author List</h2>
+            </div>
+            <section>
+                <a id="bsname" href="brandon.html" target="_blank">
+                    <img class="namecard" src="images/bsname1.png" alt="Brandon Sanderson">
+                </a>
+                <a id="jwname" href="jeff.html" target="_blank">
+                    <img class="namecard" src="images/jwname1.png" alt="Jeff Wheeler">
+                </a>
+                <a id="faname" href="#" target="_blank">
+                    <img class= "namecard" src="images/faname1.png" alt="Future Author">
+                </a>
+            </section>
+        </main>
+    </div>
     <footer>
         <p> Fogle Family Library &copy; 2022 Jarom Fogle</p>
         <p><a href="site-plan.html" target="_blank">Site Plan</a></p>
