--- a/foglelibrary/jeff.html
+++ b/foglelibrary/jeff.html
@@ -7,7 +7,7 @@
     <title>Fogle Family Library Homepage</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="jwgrid">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/green.png" alt="Fogle Family Library Logo">
