--- a/foglelibrary/index.html
+++ b/foglelibrary/index.html
@@ -18,7 +18,7 @@
             <a href= "jeff.html">Jeff Wheeler</a>
             <a href= "https://www.librariesofhope.com">Libraries of Hope</a>
         </nav>
-    </header>s
+    </header>
     
     <div id="hometitle">
         <!--<a id="logo_link">
