--- a/foglelibrary/index.html
+++ b/foglelibrary/index.html
@@ -21,10 +21,10 @@
     </header>
     
     <div id="hometitle">
-        <!--<a id="logo_link">
-            <img class="logo" src="images/fliblogo.png" alt="Fogle Family Library Logo">
-        </a>-->
-        <p class="title">Fogle Family Library</p>
+        <a id="logo2">
+            <img class="logo2" src="images/fliblogo.png" alt="Fogle Family Library Logo">
+        </a>
+        <!--<p class="title">Fogle Family Library</p>-->
     </div>
     
     <section id="bodygrid">
