--- a/foglelibrary/jeff.html
+++ b/foglelibrary/jeff.html
@@ -16,6 +16,7 @@
             <a href= "index.html">Home</a>
             <a href= "brandon.html">Brandon Sanderson</a>
             <a href= "jeff.html">Jeff Wheeler</a>
+            <a href="books.html">Favorite Books</a>
             <a href= "https://www.librariesofhope.com">Libraries of Hope</a>
         </nav>
     </header>
