child page final

--- a/foglelibrary/jeff.html
+++ b/foglelibrary/jeff.html
@@ -60,7 +60,7 @@
     
     <footer>
         <p> Fogle Family Library &copy; 2022 Jarom Fogle</p>
-        <p><a href="site-plan.html" target="_blank">Site Plan</a></p>
+        <a class=link href="site-plan.html" target="_blank">Site Plan</a>
         <div class = "social">
             <a href="https://facebook.com" target ="_blank">
                 <img src="images/facebook.png" alt="fb icon">
